refactor!: Keep activity suffix in i18n keys
Magic deletion of `_activity` suffix leads to confusion and possible
collisions.

--- a/lib/amazing_activist/locale/en.yml
+++ b/lib/amazing_activist/locale/en.yml
@@ -1,4 +1,4 @@
 en:
   amazing_activist:
     failures:
-      not_implemented: "<%{activity}> activity has no implementation"
+      not_implemented: "<%{activity}> has no implementation"
